k8s/frontend/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
